fix readability text legend in story pol

--- a/styles/_stories.scss
+++ b/styles/_stories.scss
@@ -40,7 +40,7 @@
   font-weight: bold;
 }
 
-.legend.text-genome-2 {
+.legend.text-politique-2, .legend.text-genome-2 {
   background: none!important;
   font-weight: bold;
 }
